backend/payment-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: payment
  labels:
    app: payment-service
spec:
  selector:
    app: payment-service
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8082
  type: ClusterIP
